# dotman-rs

./: .gitignore  Cargo.toml  LICENSE  READMD.md  README.md
src/: add.rs  cli.rs  config.rs  example.rs  init.rs  link.rs  main.rs  restore.rs  setup.rs  status.rs  types.rs  update.rs  utils.rs
