[package]
name = "dotman"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["alloc"] }
clap = { version = "4.5.30", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["add", "as_ref", "from", "try_from", "deref"] }
rstest = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"
